# tarkov-interactive-map-assistant-desktop-main

./: .eslintrc  .gitignore  CLAUDE.md  README.md  README_EN.md  README_ZH.md  big-config.json  index.html  package-lock.json  package.json  pip-config.README.md  pip-config.json  runOrBuild.md  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/steering/: file-modification-policy.md
.github/workflows/: build.yml
public/: translations.txt
scripts/: extract-extract-names.cjs
src/: main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/the-lab-map/: README.md
src/data/: extract_names_zh.json  interactive_maps.ts
src/data/maps/: customs.json  factory-5.json  factory.json  ground-zero-2.json  ground-zero.json  interchange.json  lighthouse.json  reserve.json  shoreline.json  streets-of-tarkov.json  the-lab.json  woods.json
src/i18n/: index.ts  zh.ts
src/pages/InteractiveMap/: index.tsx  utils.ts
src/pages/InteractiveMap/components/BaseMap/: index.tsx
src/pages/InteractiveMap/components/Canvas/: index.tsx
src/pages/InteractiveMap/components/DrawLines/: index.tsx
src/pages/InteractiveMap/components/Extracts/: index.tsx
src/pages/InteractiveMap/components/Hazards/: index.tsx
src/pages/NotFound/: index.tsx
src/pages/PipWindow/: index.tsx  style.less
src/scripts/: axios.ts  notification.ts
src/store/: mmvisible.ts
src/styles/: rc-toastify.less
src/utils/: index.ts  translate.ts
typings/interactive-map/: index.d.ts
(+26 files in other folders)
